src/testFunctional/testData/org/intellij/xquery/parser/errors/IncompletePredicateInXmlAttribute.xq
<p class="{$items[@id=$id}]">Test</p>